# gem5-dpdk-setup

./: .gitattributes  Dockerfile  README.md
applications/memcached_kernel/: CMakeLists.txt  README.md  dpdk.h  helpers.h  memcached_SendBuffer.c  memcached_client.cc  memcached_client.h  setup_cloudlab.sh
applications/memcached_kernel/memcached/: memcached.c
buildroot/: Config.in
buildroot/configs/: gem5_defconfig
buildroot/package/dpdk/: Config.in  dpdk.mk
buildroot/package/dpdk/dpdk-source/app/: testpmd.c  testpmd.h
buildroot/package/dpdk_memcached/: Config.in  dpdk.mk  dpdk_memcached.mk
buildroot/package/dpdk_memcached/dpdk_memcached_src/: CMakeLists.txt
buildroot/package/dpdk_pktgen/: Config.in  dpdk_pktgen.mk
buildroot/package/dpdk_pktgen/pktgen-source/app/: pktgen.h
buildroot/package/dpdk_pktgen/pktgen-source/cfgs/: 1024.pkt  128.pkt  1518.pkt  256.pkt  512.pkt  64.pkt
buildroot/package/dpdk_pktgen/pktgen-source/libdep/: ld-linux-aarch64.so.1  libDeployPkg.so.0.0.0  libXext.so.6  libXmuu.so.1.0.0  libXpm.so.4.11.0  libaio.so.1  libapparmor.so.1.8.2  libappstream.so.4  libapt-pkg.so.6.0.0  libapt-private.so.0.0  libarchive.so.13.6.0  libargon2.so.1  libassuan.so.0.8.5  libatasmart.so.4  libatm.so.1.0.0  libatomic.so.1.2.0  libbd_fs.so.2.0.0  (+228 more)
dpdk-helper-scripts/: deps.sh  dpdk_pkgen.sh  setup_machine.sh  shared.sh
dpdk-pktgen-build/: dpdk_pkgen.sh  dpdk_pktgen.sh  dpdk_v20.11.3.patch  patch_dpdk.sh  setup_machine.sh  shared.sh
dpdk-pktgen-build/exp/pktgen/: cfg.pkt  cfg_gen.sh  configs-test.txt  data.sh  run.sh  stats.sh
dpdk-pktgen-build/exp/pktgen/cfgs/: 1024_100_10.pkt  1024_100_20.pkt  1024_10_10.pkt  1024_11_10.pkt  1024_12_10.pkt  1024_13_10.pkt  1024_14_10.pkt  1024_15_10.pkt  1024_1_10.pkt  1024_2_10.pkt  1024_3_10.pkt  1024_45_10.pkt  1024_46_10.pkt  1024_47_10.pkt  1024_48_10.pkt  1024_48_20.pkt  1024_49_10.pkt  1024_49_20.pkt  1024_4_10.pkt  1024_50_10.pkt  1024_50_20.pkt  1024_51_10.pkt  1024_51_20.pkt  1024_52_10.pkt  1024_52_20.pkt  1024_53_10.pkt  1024_53_20.pkt  1024_54_10.pkt  1024_54_20.pkt  1024_55_10.pkt  1024_55_20.pkt  1024_56_10.pkt  1024_56_20.pkt  1024_57_10.pkt  1024_57_20.pkt  1024_58_10.pkt  1024_58_20.pkt  1024_59_10.pkt  1024_59_20.pkt  1024_5_10.pkt  (+545 more)
dpdk-pktgen-build/exp/testpmd/: cfg_gen.sh  configs-freq.txt  configs-nbcores.txt  configs-rxptx.txt  configs-test.txt  configs-touchfwd.txt  configs.txt  droprate.sh  gen.sh  run.sh
dpdk-pktgen-build/exp/testpmd/cfgs/: 1024_100_10.pkt  1024_100_20.pkt  1024_10_10.pkt  1024_11_10.pkt  1024_12_10.pkt  1024_13_10.pkt  1024_14_10.pkt  1024_15_10.pkt  1024_1_10.pkt  1024_2_10.pkt  1024_3_10.pkt  1024_40_10.pkt  1024_45_10.pkt  1024_46_10.pkt  1024_47_10.pkt  1024_48_10.pkt  1024_48_20.pkt  1024_49_10.pkt  1024_49_20.pkt  1024_4_10.pkt  1024_50_10.pkt  1024_50_20.pkt  1024_51_10.pkt  1024_51_20.pkt  1024_52_10.pkt  1024_52_20.pkt  1024_53_10.pkt  1024_53_20.pkt  1024_54_10.pkt  1024_54_20.pkt  1024_55_10.pkt  1024_55_20.pkt  1024_56_10.pkt  1024_56_20.pkt  1024_57_10.pkt  1024_57_20.pkt  1024_58_10.pkt  1024_58_20.pkt  1024_59_10.pkt  1024_59_20.pkt  (+535 more)
gem5/: simout
gem5/configs/common/: CacheConfig.py  CacheConfig2.py  Caches.py  FSConfig.py  Options.py  Simulation.py
gem5/configs/example/: fs.py  fs_dual.py
gem5/myenv/: pyvenv.cfg
gem5/outdir/: config.dot  config.ini  config.json  system.dtb  system.terminal
gem5/outdir/cpt.503705619000/: system.pci_ide.disks.image.cow  system.physmem.store3.pmem
gem5/outdir/cpt.639874298750/: system.physmem.store0.pmem  system.physmem.store4.pmem  system.physmem.store5.pmem
gem5/src/arch/arm/: ArmSystem.py  ArmTLB.py
gem5/src/cpu/: BaseCPU.py
gem5/src/dev/net/: Ethernet.py  SConscript  etherdevice.cc  etherdevice.hh  i8254xGBe.cc  i8254xGBe.hh  load_generator.cc  load_generator_pcap.cc  load_generator_pcap.hh  load_generator_pcap.py
gem5/src/mem/cache/: Cache.py
gem5/testdir/: config.dot  config.ini  config.json  system.dtb  system.terminal
guest-scripts/: dpdk-l2fwd-touchdrop.sh  dpdk-l2fwd-touchfwd.sh  dpdk-l2fwd.sh  dpdk-pktgen-1024.sh  dpdk-pktgen-128.sh  dpdk-pktgen-1518.sh  dpdk-pktgen-256.sh  dpdk-pktgen-512.sh  dpdk-pktgen-64.sh  dpdk-pktgen.sh  dpdk-testpmd-2.sh  dpdk-testpmd-256.sh  dpdk-testpmd-3.sh  dpdk-testpmd-32.sh  dpdk-testpmd-4.sh  dpdk-testpmd-5.sh  dpdk-testpmd-512.sh  dpdk-testpmd-6.sh  dpdk-testpmd-8.sh  dpdk-testpmd-rxptx-1.sh  dpdk-testpmd-rxptx-10.sh  dpdk-testpmd-rxptx-100.sh  dpdk-testpmd-rxptx-1000.sh  dpdk-testpmd-rxptx-10000.sh  dpdk-testpmd-rxptx-1000ns.sh  dpdk-testpmd-rxptx-10ns.sh  dpdk-testpmd-rxptx-30.sh  dpdk-testpmd-rxptx-300.sh  dpdk-testpmd-rxptx-50.sh  dpdk-testpmd-rxptx-500.sh  dpdk-testpmd-rxptx-70.sh  dpdk-testpmd-rxptx.sh  dpdk-testpmd-touchdrop.sh  dpdk-testpmd-touchfwd.sh  dpdk-testpmd.sh  iperf-1.sh  iperf-1024.sh  iperf-128.sh  iperf-1518.sh  iperf-256.sh  (+7 more)
resources-dpdk/: request-10k.pcap  request-dpdk-10k.pcap  request-rx.pcap  request-tx.pcap  rootfs.ext2  vmlinux  warmup-5k.pcap  warmup-dpdk-20k.pcap  warmup-dpdk-5k.pcap  warmup-dpdk-trace.pcap  warmup-dpdk.pcap  warmup-rx.pcap  warmup-tx.pcap
run-scripts/: iperf-dist-1GHz.sh  iperf-dist-2GHz.sh  iperf-dist2.sh  killpid.sh  l2fwd-ckp-branchpred.sh  l2fwd-ckp-btbentries.sh  l2fwd-ckp-cputypes-100.sh  l2fwd-ckp-cputypes.sh  l2fwd-ckp-l1caches-100.sh  l2fwd-ckp-l1caches.sh  l2fwd-ckp-l2cache-100.sh  l2fwd-ckp-l2cache.sh  l2fwd-ckp-l3cache-100.sh  l2fwd-ckp-l3cache.sh  l2fwd-ckp-memchannel-100.sh  l2fwd-ckp-memchannel.sh  l2fwd-ckp-robentries-100.sh  l2fwd-ckp-robentries.sh  l2fwd-ckp-rxptx-1-new.sh  l2fwd-ckp-rxptx-1.sh  l2fwd-ckp-rxptx-10.sh  l2fwd-ckp-rxptx-100-new.sh  l2fwd-ckp-rxptx-100.sh  l2fwd-ckp-rxptx-1000-new.sh  l2fwd-ckp-rxptx-1000.sh  l2fwd-ckp-rxptx-10000.sh  l2fwd-ckp-rxptx-30.sh  l2fwd-ckp-rxptx-300.sh  l2fwd-ckp-rxptx-50.sh  l2fwd-ckp-rxptx-500.sh  l2fwd-ckp-rxptx-70.sh  l2fwd-ckp-rxptx-ddio-disabled-100.sh  l2fwd-ckp-rxptx-ddio-disabled.sh  l2fwd-ckp-rxptx-freq-100.sh  l2fwd-ckp-rxptx-freq.sh  l2fwd-ckp-rxptx.sh  l2fwd-ckp.sh  memcached-dpdk-caches.sh  memcached-dpdk.sh  memcached-kernel-caches.sh  (+47 more)
(+23 files in other folders)
